[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mysql-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pymysql>=1.1.1",
]

[project.scripts]
mysql-mcp-server = "mysql_mcp_server.main:main"
